# lms-backend

./: .env  .gitignore  Dockerfile  EDR.drawio  docker-compose.dev.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 129b51d69c9a_make_nullable_first_name_and_last_name.py  1dc0c86369aa_create_hash_password_with_so_that_it_.py  3a0a60bba317_modify_created_at_and_updated_at_type.py  63ccd552606b_create_user_table.py  691152fef6cb_create_user_table.py  97dda699c03a_create_user_table.py  a4ff5a09b95f_initial_migrations.py  c605db649d84_update_timestamped.py  cb161fc2006d_make_unique_username_field_on_user_model.py  cb9059019c54_enforce_email_validation.py
src/: main.py
src/api/: routers.py
src/apps/auth/: dependencies.py  models.py  schemas.py  services.py  users.py  utils.py
src/apps/auth/routes/: auth.py
src/apps/courses/: models.py  schemas.py  services.py
src/apps/courses/routes/: courses.py
src/configs/: database_configs.py  settings.py
src/core/db/: async_database.py  base_models.py
